--- a/express-proj/client-server.html
+++ b/express-proj/client-server.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- 
+          method="get" -> data pass via URL [param obj]
+          method="post" -> data pass via BODY [body obj]
+       -->
     <form action="./demo.htm" method="post">
       <input type="text" placeholder="USERNAME" name="uName" /><br />
       <input type="password" placeholder="PASSWORD" name="pass" />
